--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@ var matrix = [];              //Initialize empty array
 for (var j = 0; j < city.length; j++) {
     matrix.push([]);
     for (var i = 0; i < 10; i++) {       //Loop 25 times
-      var newNumber = Math.random() * 9000 + 1000;
+      var newNumber = Math.random() * 10000;
       matrix[j].push(newNumber);       //Add new number to array
 }}
 
