--- a/index3.html
+++ b/index3.html
@@ -92,22 +92,22 @@ d3.csv("cities.csv", function(cities){
 
   //NE is blue
   var NE_color = d3.scale.linear()
-    .domain([0,NE])
+    .domain([0,NE+1])
     .range([d3.rgb(0,255,255),d3.rgb(0,0,64)]);
 
   //SE is green
   var SE_color = d3.scale.linear()
-    .domain([0,SE])
+    .domain([0,SE+1])
     .range([d3.rgb(0,255,0),d3.rgb(0,64,0)]);
 
   //SW is orange
   var SW_color = d3.scale.linear()
-    .domain([0,SW])
+    .domain([0,SW+1])
     .range([d3.rgb(255,255,0),d3.rgb(64,64,0)]);
 
   //NW is red
   var NW_color = d3.scale.linear()
-    .domain([0,NW])
+    .domain([0,NW+1])
     .range([d3.rgb(255,0,0),d3.rgb(64,0,0)]);
 
   var fill = [];
