--- a/index3.html
+++ b/index3.html
@@ -75,7 +75,7 @@ var svgp = d3.select("body").append("div")
 
   svgp.append("rect")
     .attr("class", "overlay")
-    .attr("width2", width)
+    .attr("width", width2)
     .attr("height", height);
 
 var svg = svgp
