--- a/index.html
+++ b/index.html
@@ -18,35 +18,29 @@
       pointer-events: all;
     }
 
+    .overlay {
+      fill: none;
+      pointer-events: all;
+    }
+
 </style>
 <body>
+
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
-var city = ['Montgomery', 'Juneau', 'Phoenix', 'Little Rock', 'Sacramento', 'Denver', 'Hartford', 'Dover', 'Tallahassee', 'Atlanta', 'Honolulu', 'Boise', 'Springfield', 'Indianapolis', 'Des Moines', 'Topeka', 'Frankfort', 'Baton Rouge', 'Augusta', 'Annapolis', 'Boston', 'Lansing', 'Saint Paul', 'Jackson', 'Jefferson City', 'Helena', 'Lincoln', 'Carson City', 'Concord', 'Trenton', 'Santa Fe', 'Albany', 'Raleigh', 'Bismarck', 'Columbus', 'Oklahoma City', 'Salem', 'Harrisburg', 'Providence', 'Columbia', 'Pierre', 'Nashville', 'Austin', 'Salt Lake City', 'Montpelier', 'Richmond', 'Olympia', 'Charleston', 'Madison', 'Cheyenne'];
-
-var matrix = [];
-for (var j = 0; j < city.length; j++) {
-    matrix.push([]);
-    for (var i = 0; i < city.length; i++) {
-      var newNumber = Math.random();
-      if (newNumber < .9){newNumber = 0};
-      matrix[j].push(newNumber);
-}}
-
-var matrix2 = [];
-for (var j = 0; j < city.length; j++) {
-    matrix2.push([]);
-    for (var i = 0; i < city.length; i++) {
-      var newNumber = Math.random();
-      if (newNumber < .9){newNumber = 0};
-      matrix2[j].push(newNumber);
-}}
-
 var padding = 40;
 
-var width = 700,
-    height = 600,
+var w = window,
+    d = document,
+    e = d.documentElement,
+    g = d.getElementsByTagName('body')[0],
+    x = w.innerWidth || e.clientWidth || g.clientWidth,
+    y = w.innerHeight|| e.clientHeight|| g.clientHeight;
+
+var width = x/2 - 20,
+    width2 = x - 40,
+    height = y - 20,
     innerRadius = Math.min(width, height) * .40 - padding,
     outerRadius = innerRadius + 24;
 
@@ -69,30 +63,98 @@ var layout2 = d3.layout.chord()
 var path = d3.svg.chord()
     .radius(innerRadius);
 
-var chord = layout.matrix(matrix);
-var chord2 = layout2.matrix(matrix2);
-
-var fill = d3.scale.category20();
-
-var svg = d3.select("body").append("div")
-    .attr("id","pos")
-    .text("positive")
+var svgp = d3.select("body").append("div")
+    //.attr("id","pos")
+    //.text("positive")
   .append("svg")
-    .attr("width", width)
+    .attr("width", width2)
     .attr("height", height)
+    .append("g")
+    .call(d3.behavior.zoom().scaleExtent([1, 8]).on("zoom", zoom))
+    .append("g");
+
+  svgp.append("rect")
+    .attr("class", "overlay")
+    .attr("width", width2)
+    .attr("height", height);
+
+var svg = svgp
   .append("g")
     .attr("class", "circle")
     .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
-var svg2 = d3.select("body").append("div")
-    .attr("id","neg")
-    .text("negative")
-  .append("svg")
-    .attr("width", width)
-    .attr("height", height)
+var svg2 = svgp
   .append("g")
     .attr("class", "circle")
-    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+    .attr("transform", "translate(" + (width+width2)/2 + "," + height / 2 + ")");
+
+var city;
+var matrix;
+var matrix2;
+var sent_matrix;
+var sent_matrix2;
+
+d3.csv("cities.csv", function(cities){
+  city = cities;
+
+  var NE = 0;
+  var SE = 0;
+  var SW = 0;
+  var NW = 0;
+
+  for (var i=0; i < cities.length; i++){
+    if (city[i].quad == "NE") NE++;
+    if (city[i].quad == "SE") SE++;
+    if (city[i].quad == "SW") SW++;
+    if (city[i].quad == "NW") NW++;
+  };
+
+  //NE is blue
+  var NE_color = d3.scale.linear()
+    .domain([0,NE+1])
+    .range([d3.rgb(0,255,255),d3.rgb(0,0,64)]);
+
+  //SE is green
+  var SE_color = d3.scale.linear()
+    .domain([0,SE+1])
+    .range([d3.rgb(0,255,0),d3.rgb(0,64,0)]);
+
+  //SW is orange
+  var SW_color = d3.scale.linear()
+    .domain([0,SW+1])
+    .range([d3.rgb(255,255,0),d3.rgb(64,64,0)]);
+
+  //NW is red
+  var NW_color = d3.scale.linear()
+    .domain([0,NW+1])
+    .range([d3.rgb(255,0,0),d3.rgb(64,0,0)]);
+
+  var fill = [];
+  for (var i = 0; i < NE; i++){
+    fill.push(NE_color(i));
+  };
+    for (var i = 0; i < SE; i++){
+    fill.push(SE_color(i));
+  };
+    for (var i = 0; i < SW; i++){
+    fill.push(SW_color(i));
+  };
+    for (var i = 0; i < NW; i++){
+    fill.push(NW_color(i));
+  };
+
+d3.json("matrix_pos.json", function(matrix_pos) {
+  matrix = matrix_pos;
+  d3.json("matrix_neg.json", function(matrix_neg) {
+    matrix2 = matrix_neg;
+
+    d3.json("sent_matrix_pos.json", function(sent_matrix_pos) {
+      sent_matrix = sent_matrix_pos;
+      d3.json("sent_matrix_neg.json", function(sent_matrix_neg) {
+        sent_matrix2 = sent_matrix_neg;
+
+    var chord = layout.matrix(matrix);
+    var chord2 = layout2.matrix(matrix2);
 
     // Add a group per neighborhood.
     var group = svg.selectAll(".group")
@@ -111,23 +173,23 @@ var svg2 = d3.select("body").append("div")
 
     // Add a mouseover title.
     group.append("title").text(function(d, i) {
-      return city[i] + ": " + formatPercent(d.value) + " of all positive tweets";
+      return city[i].name + ": " + formatPercent(d.value) + " of all positive tweets";
     });
 
     group2.append("title").text(function(d, i) {
-      return city[i] + ": " + formatPercent(d.value) + " of all negative tweets";
+      return city[i].name + ": " + formatPercent(d.value) + " of all negative tweets";
     });
 
     // Add the group arc.
     var groupPath = group.append("path")
         .attr("id", function(d, i) { return "group" + i; })
         .attr("d", arc)
-        .style("fill", function(d, i) { return fill(i); });
+        .style("fill", function(d, i) { return fill[i]; });
 
     var groupPath2 = group2.append("path")
         .attr("id", function(d, i) { return "group" + i; })
         .attr("d", arc)
-        .style("fill", function(d, i) { return fill(i); });
+        .style("fill", function(d, i) { return fill[i]; });
 
 
     // Add the chords.
@@ -135,7 +197,7 @@ var svg2 = d3.select("body").append("div")
         .data(layout.chords)
       .enter().append("path")
         .attr("class", "chord")
-        .style("fill", function(d) { return fill(d.source.index); })
+        .style("fill", function(d) { return fill[d.source.index]; })
         .attr("d", path)
         .style("opacity", 1);
 
@@ -143,22 +205,26 @@ var svg2 = d3.select("body").append("div")
         .data(layout2.chords)
       .enter().append("path")
         .attr("class", "chord")
-        .style("fill", function(d) { return fill(d.source.index); })
+        .style("fill", function(d) { return fill[d.source.index]; })
         .attr("d", path)
         .style("opacity", 1);
 
 
     // Add a mouseover title for each chord.
     chord.append("title").text(function(d) {
-      return city[d.source.index]
-          + " → " + city[d.target.index]
-          + ": " + formatPercent(d.source.value);
+      return city[d.source.index].name
+          + " → " + city[d.target.index].name
+          + ": " + formatPercent(d.source.value)
+          + "\n"
+          + "average sentiment score: " + d3.round(sent_matrix[d.source.index][d.target.index], 2);
     });
 
     chord2.append("title").text(function(d) {
-      return city[d.source.index]
-          + " → " + city[d.target.index]
-          + ": " + formatPercent(d.source.value);
+      return city[d.source.index].name
+          + " → " + city[d.target.index].name
+          + ": " + formatPercent(d.source.value)
+          + "\n"
+          + "average sentiment score: " + d3.round(sent_matrix2[d.source.index][d.target.index], 2);
     });
 
 var ticks = group.selectAll("g")
@@ -220,7 +286,7 @@ function groupTicks(d) {
   return d3.range(1).map(function(v, i) {
     return {
       angle: k + d.startAngle,
-      label: city[d.index]
+      label: city[d.index].name
     };
   });
 }
@@ -230,14 +296,25 @@ function fade(opacity) {
   return function(g, i) {
     svg.selectAll("path.chord")
         .filter(function(d) { return d.source.index != i && d.target.index != i; })
-      .transition()
+      //.transition()
         .style("opacity", opacity);
 
     svg2.selectAll("path.chord")
         .filter(function(d) { return d.source.index != i && d.target.index != i; })
-      .transition()
+      //.transition()
         .style("opacity", opacity);
   };
+}
+
+
+});
+});
+});
+});
+});
+
+function zoom() {
+  svgp.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
 }
 
 </script>
